--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 #root {
-  max-width: 1280px;
+  padding-top: 2rem;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  text-align: center ;
 }
 
 .logo {
